--- a/public/aboutme/index.html
+++ b/public/aboutme/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="vn">
-    <head><script src="/quanda.github.io/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=quanda.github.io/livereload" data-no-instant defer></script>
+    <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>About Me - Quanda&#39;s Blog</title><meta name="Description" content="About Me"><meta property="og:url" content="http://localhost:1313/quanda.github.io/aboutme/">
-  <meta property="og:site_name" content="Quanda&#39;s Blog">
-  <meta property="og:title" content="About Me">
-  <meta property="og:description" content="About Me">
-  <meta property="og:locale" content="vn">
-  <meta property="og:type" content="article">
-    <meta property="og:image" content="http://localhost:1313/logo.png">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="http://localhost:1313/logo.png"><meta name="twitter:title" content="About Me">
-<meta name="twitter:description" content="About Me">
+        <title>About Me - Quanda&#39;s Blog</title><meta name="Description" content="About Me"><meta property="og:title" content="About Me" />
+<meta property="og:description" content="About Me" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="https://quanda.github.io/aboutme/" /><meta property="og:image" content="https://quanda.github.io/logo.png"/><meta property="article:section" content="" />
+
+<meta property="og:site_name" content="Quanda&#39;s Blog" />
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="https://quanda.github.io/logo.png"/>
+
+<meta name="twitter:title" content="About Me"/>
+<meta name="twitter:description" content="About Me"/>
 <meta name="application-name" content="CTF Blogs">
 <meta name="apple-mobile-web-app-title" content="CTF Blogs"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://localhost:1313/quanda.github.io/aboutme/" /><link rel="stylesheet" href="/quanda.github.io/css/style.scss"><link rel="preload" href="/quanda.github.io/lib/fontawesome-free/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-        <noscript><link rel="stylesheet" href="/quanda.github.io/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" href="/quanda.github.io/lib/animate/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-        <noscript><link rel="stylesheet" href="/quanda.github.io/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://quanda.github.io/aboutme/" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="/lib/fontawesome-free/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" href="/lib/animate/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
@@ -27,9 +28,9 @@
         "inLanguage": "vn",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "http:\/\/localhost:1313\/quanda.github.io\/aboutme\/"
+            "@id": "https:\/\/quanda.github.io\/aboutme\/"
         },"genre": "page","wordcount":  15 ,
-        "url": "http:\/\/localhost:1313\/quanda.github.io\/aboutme\/","publisher": {
+        "url": "https:\/\/quanda.github.io\/aboutme\/","publisher": {
             "@type": "Organization",
             "name": ""},"author": {
                 "@type": "Person",
@@ -42,10 +43,10 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/quanda.github.io/" title="Quanda&#39;s Blog"><span id="id-1" class="typeit"></span></a>
+            <a href="/" title="Quanda&#39;s Blog"><span id="id-1" class="typeit"></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/quanda.github.io/posts/"> Posts </a><a class="menu-item" href="/quanda.github.io/tags/"> Tags </a><a class="menu-item active" href="/quanda.github.io/aboutme/"> About Me </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/"> Posts </a><a class="menu-item" href="/tags/"> Tags </a><a class="menu-item active" href="/aboutme/"> About Me </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -65,7 +66,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/quanda.github.io/" title="Quanda&#39;s Blog"><span id="id-2" class="typeit"></span></a>
+                <a href="/" title="Quanda&#39;s Blog"><span id="id-2" class="typeit"></span></a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -87,7 +88,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/quanda.github.io/posts/" title="">Posts</a><a class="menu-item" href="/quanda.github.io/tags/" title="">Tags</a><a class="menu-item" href="/quanda.github.io/aboutme/" title="">About Me</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/posts/" title="">Posts</a><a class="menu-item" href="/tags/" title="">Tags</a><a class="menu-item" href="/aboutme/" title="">About Me</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a></div>
     </div>
@@ -100,10 +101,10 @@
                 <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">About Me</h1><div class="content" id="content"><h2 id="some-background-information">Some Background Information</h2>
 <p>From KCSC</p>
 <h2 id="contact-me">Contact Me</h2>
-<p>You can contact me via <a href="mailto:sumitalam@iut-dhaka.edu" rel="">Email</a>, or <a href="https://github.com/Quandaaaa" target="_blank" rel="noopener noreffer ">Github</a>.</p>
+<p>You can contact me via <a href="thaivietquan050505@gmail.com" rel="">Email</a>, or <a href="https://github.com/Quandaaaa" target="_blank" rel="noopener noreffer ">Github</a>.</p>
 </div></div></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.125.7">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
+        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.113.0">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
                 </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"></div>
         </div>
     </footer></div>
@@ -113,5 +114,5 @@
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="fas fa-comment fa-fw" aria-hidden="true"></i>
             </a>
-        </div><link rel="stylesheet" href="/quanda.github.io/lib/lightgallery/css/lightgallery-bundle.min.css"><link rel="stylesheet" href="/quanda.github.io/lib/katex/katex.min.css"><script type="text/javascript" src="/quanda.github.io/lib/autocomplete/autocomplete.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/lunr/lunr.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/lazysizes/lazysizes.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/lightgallery/lightgallery.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/lightgallery/plugins/thumbnail/lg-thumbnail.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/lightgallery/plugins/zoom/lg-zoom.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/clipboard/clipboard.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/sharer/sharer.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/typeit/index.umd.js"></script><script type="text/javascript" src="/quanda.github.io/lib/katex/katex.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/katex/contrib/auto-render.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/katex/contrib/copy-tex.min.js"></script><script type="text/javascript" src="/quanda.github.io/lib/katex/contrib/mhchem.min.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"comment":{},"data":{"id-1":"lolipop","id-2":"lolipop"},"lightgallery":true,"math":{"delimiters":[{"display":true,"left":"$$","right":"$$"},{"display":true,"left":"\\[","right":"\\]"},{"display":true,"left":"\\begin{equation}","right":"\\end{equation}"},{"display":true,"left":"\\begin{equation*}","right":"\\end{equation*}"},{"display":true,"left":"\\begin{align}","right":"\\end{align}"},{"display":true,"left":"\\begin{align*}","right":"\\end{align*}"},{"display":true,"left":"\\begin{alignat}","right":"\\end{alignat}"},{"display":true,"left":"\\begin{alignat*}","right":"\\end{alignat*}"},{"display":true,"left":"\\begin{gather}","right":"\\end{gather}"},{"display":true,"left":"\\begin{CD}","right":"\\end{CD}"},{"display":false,"left":"$","right":"$"},{"display":false,"left":"\\(","right":"\\)"}],"strict":false},"search":{"highlightTag":"em","lunrIndexURL":"/quanda.github.io/index.json","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"lunr"},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"],"id-2":["id-2"]},"duration":-1,"speed":100}};</script><script type="text/javascript" src="/quanda.github.io/js/theme.min.js"></script></body>
+        </div><link rel="stylesheet" href="/lib/lightgallery/css/lightgallery-bundle.min.css"><link rel="stylesheet" href="/lib/katex/katex.min.css"><script type="text/javascript" src="/lib/autocomplete/autocomplete.min.js"></script><script type="text/javascript" src="/lib/lunr/lunr.min.js"></script><script type="text/javascript" src="/lib/lazysizes/lazysizes.min.js"></script><script type="text/javascript" src="/lib/lightgallery/lightgallery.min.js"></script><script type="text/javascript" src="/lib/lightgallery/plugins/thumbnail/lg-thumbnail.min.js"></script><script type="text/javascript" src="/lib/lightgallery/plugins/zoom/lg-zoom.min.js"></script><script type="text/javascript" src="/lib/clipboard/clipboard.min.js"></script><script type="text/javascript" src="/lib/sharer/sharer.min.js"></script><script type="text/javascript" src="/lib/typeit/index.umd.js"></script><script type="text/javascript" src="/lib/katex/katex.min.js"></script><script type="text/javascript" src="/lib/katex/contrib/auto-render.min.js"></script><script type="text/javascript" src="/lib/katex/contrib/copy-tex.min.js"></script><script type="text/javascript" src="/lib/katex/contrib/mhchem.min.js"></script><script type="text/javascript">window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":50},"comment":{},"data":{"id-1":"Quanda","id-2":"Quanda"},"lightgallery":true,"math":{"delimiters":[{"display":true,"left":"$$","right":"$$"},{"display":true,"left":"\\[","right":"\\]"},{"display":true,"left":"\\begin{equation}","right":"\\end{equation}"},{"display":true,"left":"\\begin{equation*}","right":"\\end{equation*}"},{"display":true,"left":"\\begin{align}","right":"\\end{align}"},{"display":true,"left":"\\begin{align*}","right":"\\end{align*}"},{"display":true,"left":"\\begin{alignat}","right":"\\end{alignat}"},{"display":true,"left":"\\begin{alignat*}","right":"\\end{alignat*}"},{"display":true,"left":"\\begin{gather}","right":"\\end{gather}"},{"display":true,"left":"\\begin{CD}","right":"\\end{CD}"},{"display":false,"left":"$","right":"$"},{"display":false,"left":"\\(","right":"\\)"}],"strict":false},"search":{"highlightTag":"em","lunrIndexURL":"/index.json","maxResultLength":10,"noResultsFound":"No results found","snippetLength":30,"type":"lunr"},"typeit":{"cursorChar":"|","cursorSpeed":1000,"data":{"id-1":["id-1"],"id-2":["id-2"]},"duration":-1,"speed":100}};</script><script type="text/javascript" src="/js/theme.min.js"></script></body>
 </html>
