--- a/public/aboutme/index.html
+++ b/public/aboutme/index.html
@@ -7,13 +7,12 @@
         <title>About Me - Quanda&#39;s Blog</title><meta name="Description" content="About Me"><meta property="og:title" content="About Me" />
 <meta property="og:description" content="About Me" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://quanda.github.io/aboutme/" /><meta property="og:image" content="https://quanda.github.io/logo.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://quanda.github.io/aboutme/" /><meta property="og:image" content="https://quanda.github.io/logo.png" /><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="Quanda&#39;s Blog" />
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://quanda.github.io/logo.png"/>
 
-<meta name="twitter:title" content="About Me"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://quanda.github.io/logo.png" /><meta name="twitter:title" content="About Me"/>
 <meta name="twitter:description" content="About Me"/>
 <meta name="application-name" content="CTF Blogs">
 <meta name="apple-mobile-web-app-title" content="CTF Blogs"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
@@ -104,7 +103,7 @@
 <p>You can contact me via <a href="thaivietquan050505@gmail.com" rel="">Email</a>, or <a href="https://github.com/Quandaaaa" target="_blank" rel="noopener noreffer ">Github</a>.</p>
 </div></div></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.113.0">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
+        <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.121.2">Hugo</a> | Theme - <a href="https://github.com/dillonzq/LoveIt" target="_blank" rel="noopener noreffer" title="LoveIt 0.2.11"><i class="far fa-kiss-wink-heart fa-fw" aria-hidden="true"></i> LoveIt</a>
                 </div><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"></div>
         </div>
     </footer></div>
